@@ -2,6 +2,7 @@
 
 	* Update version to 3.2.0
 	* Fix some Spanish labels
+	* Fix reference to .xml language file
 
 2014-03-30  Stanislas Rolland  <typo3@sjbr.ca>
 
